Use log/hadoop/mapred and run/hadoop/mapred for JHS, remove JobTracker/TaskTracker references